Bug 59530 - Writer's doc import and export fails to support comments attached to ranges
Summary: Writer's doc import and export fails to support comments attached to ranges
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0
Keywords:
: 52958 63496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-17 20:56 UTC by OfficeUser
Modified: 2014-02-07 10:16 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2013-01-17 20:56:36 UTC
LibreOffice 4 introduces the feature
"Enable attaching comments to document text ranges. fdo#38244"
https://bugs.freedesktop.org/show_bug.cgi?id=38244


- Open a writer document
- Attache a comment to a text rangeLibO
- Save as doc
- Close the document
- Re-open the document

Now the comment is atatched to a position between characters. The range is lost.

Try to open LibreOffice-produced doc in Word an Word-produced doc in LibreOffice revealed that both, import and export filters fail to handle comments atteched to document text ranges.
Comment 1 Gerry 2013-01-17 23:42:01 UTC
I can confirm this behaviour in 4.0rc1. Comments for text ranges are not exported to .doc. However, they are working fine in the export to .docx.

Please update the .doc export to include comments for text ranges.
Comment 2 Joel Madero 2013-01-18 16:17:43 UTC
As Gerry has confirmed this, marking as NEW.

NEW (Confirmed)
Minor (wouldn't really prevent high quality work from what I can see, just an annoyance)
High (as it's a new feature in 4.0, it should really work correctly)
Comment 3 Gerry 2013-01-18 22:00:27 UTC
*** Bug 52958 has been marked as a duplicate of this bug. ***
Comment 4 Moritz Moeller-Herrmann 2013-01-19 15:20:09 UTC
(In reply to comment #3)
> *** Bug 52958 has been marked as a duplicate of this bug. ***

Interesting to see that the new bug that was opened makes the old bug report a duplicate... :-) Normally it is the other way around.
Comment 5 Miklos Vajna 2013-01-19 15:42:25 UTC
It's indeed not logical, but hey, it's already done, doesn't make too much sense to reverse it now.

Anyway, I'll look into this.
Comment 6 Joel Madero 2013-01-20 20:46:24 UTC
We tend not to do that in QA but sometimes we'll do a BT or a bibisect and just mark the older one as a dupe. We'll try to be a bit better about this as QA but in general I think we're pretty good :)
Comment 7 Not Assigned 2013-01-21 08:33:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7907cc0ef9751d553014bd3bab49be9e7fc31bca

fdo#59530 WW8 import of commented text ranges



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerry 2013-10-07 08:59:58 UTC
Can the status of this bug be changed to RESOLVED -> FIXED? According to comment 7, there was already a patch. Did it solve the issue?
Comment 9 Miklos Vajna 2013-10-07 15:37:17 UTC
The import patch only supports comments which start and end at the same paragraph, so it's not complete. The export part is missing. So please don't close it yet.
Comment 10 Tamás Zolnai 2014-01-03 13:08:55 UTC
*** Bug 63496 has been marked as a duplicate of this bug. ***
Comment 11 Tamás Zolnai 2014-01-03 16:06:51 UTC
Remaining parts are solved by these commits:
Export: 5969eec0e998804eba77338b17de90737e2acb43
Import of comments affects more paragraphs: f2945255df273404ee2457dcf761cb8f334b732b