fdo#59530 WW8 import of commented text ranges

Change-Id: I3e2928922ebcec8188c1b5416108373c4f26dd62